# OpenCV_test

OpenCV_test/: .gitignore  CMakeLists.txt  DegreofCircle.cpp  DegreofCircle.h  ImgProcessing.cpp  ImgProcessing.h  main.cpp
